# rust-carball

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  release-rust-binary.yml  release.yml  release2.yml  ubuntu.yml
benches/: bench.rs
src/: frame_parser.rs  lib.rs  main.rs
src/actor_handlers/: ball.rs  base.rs  boost.rs  boost_pickup.rs  car.rs  factory.rs  game_event.rs  game_info.rs  mod.rs  player.rs  team.rs  utils.rs
src/analysis/: analyzer.rs  ball_prediction.rs  gameplay_period.rs  hit.rs  mod.rs  stats.rs
src/cleaner/: boost_pad.rs  boost_pickup.rs  mod.rs  spawn.rs
src/outputs/: demo.rs  game.rs  mod.rs  output.rs  player.rs  range_check.rs  team.rs  write.rs
