[package]
name = "carball"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcars = "0.9.3"
log = "0.4.14"
simplelog = "0.11.2"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
indicatif = "0.16.2"
polars = { version = "0.19.1", features = ["dtype-u8", "parquet"] }
ndarray = "0.15.4"
ndarray-stats = "0.5.0"
# nalgebra = "0.18.1"
thiserror = "1.0.30"
clap = { version = "3.1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
path = "benches/bench.rs"
name = "bench_parsing"
harness = false

[profile.release] 
debug = true