[package]
name = "carball"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcars = "0.9.3"
log = "0.4.14"
simplelog = "0.11.2"
lazy_static = "1.4.0"
serde = "1.0.126"
serde_json = "1.0.64"
indicatif = "0.16.2"
polars = {version = "0.16.0", features = ["dtype-u8", "parquet"]}
ndarray = "0.15.3"
ndarray-stats = "0.5.0"
chip = { version = "0.0.6", optional = true }
nalgebra = "0.18.1"
thiserror = "1.0.30"
structopt = "0.3.22"
clap = "2.33.3"

[features]
ball_prediction = ["dep:chip"]
default = ["ball_prediction"]

[dependencies.pyo3]
version = "0.14.1"
features = ["auto-initialize"]

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
path = "benches/bench.rs"
name = "bench_parsing"
harness = false

[profile.release] 
lto = true
debug = true
