[package]
name = "carball"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcars = "0.9.11"
log = "0.4.20"
simplelog = "0.12.1"
lazy_static = "1.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
indicatif = "0.17.7"
polars = { version = "0.35.4", features = ["dtype-u8"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
# nalgebra = "0.18.1"
thiserror = "1.0.52"
clap = { version = "4.4.12", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
path = "benches/bench.rs"
name = "bench_parsing"
harness = false

[profile.release] 
debug = true

[features]
default = ["write"]
write = ["polars/parquet"]
